--- a/app/src/main/res/layout/content_reservations2.xml
+++ b/app/src/main/res/layout/content_reservations2.xml
@@ -1,12 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".reservations2"
-    tools:showIn="@layout/app_bar_student_main">
+    tools:showIn="@layout/app_bar_student_main"
+    android:orientation="vertical">
+
+    <android.support.design.widget.TabLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        app:tabGravity="fill"
+        app:tabMode="fixed"
+        android:id="@+id/tabLayoutReservations2"
+        app:tabTextColor="#fff"
+        app:tabIndicatorColor="#2d2d2d"
+        android:background="@color/colorPrimary"/>
+
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/viewPagerReservations2">
+    </android.support.v4.view.ViewPager>
 
 
-</RelativeLayout>
+</LinearLayout>
