--- a/app/src/main/res/layout/content_student_main.xml
+++ b/app/src/main/res/layout/content_student_main.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".student_main"
-    tools:showIn="@layout/app_bar_student_main">
+    tools:showIn="@layout/app_bar_student_main"
+    android:orientation="vertical">
 
 
     <android.support.v4.view.ViewPager
@@ -44,9 +45,11 @@
         android:id="@+id/findInstructor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:text="ابحث عن أستاذ"
         android:layout_below="@+id/top3text"
         android:layout_centerHorizontal="true"
         />
 
-</RelativeLayout>
+</LinearLayout>
