--- a/app/src/main/res/layout/spot_info.xml
+++ b/app/src/main/res/layout/spot_info.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
@@ -13,9 +13,13 @@
         android:id="@+id/listViewSpotInfoTime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
         android:drawableBottom="@color/colorPrimary"
         android:paddingBottom="15dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#000"
+        android:textSize="20sp"
+        android:gravity="right"
+        android:layout_gravity="right"
         />
 
 
