--- a/app/src/main/res/layout/activity_search_for_instructor.xml
+++ b/app/src/main/res/layout/activity_search_for_instructor.xml
@@ -26,31 +26,28 @@
             android:orientation="vertical">
 
 
-
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:padding="10dp"
+                android:layout_marginBottom="30dp"
+                android:layout_marginTop="30dp"
                 android:orientation="horizontal">
-
 
 
                 <EditText
                     android:id="@+id/editTextName"
-                    android:layout_width="190dp"
+                    android:layout_width="280dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="30dp"
-                    android:layout_marginTop="30dp"
+
                     android:background="@drawable/rounded"
                     android:hint="البحث بالاسم"
                     android:inputType="text" />
 
                 <Button
                     android:id="@+id/button1"
-                    android:layout_width="100dp"
-                    android:layout_height="50dp"
-                    android:text="بحث متقدم" />
+                    android:layout_width="33dp"
+                    android:layout_height="31dp"
+                    android:background="@drawable/advancedsearch" />
 
             </LinearLayout>
 
