--- a/app/src/main/res/layout/fragment_advanced.xml
+++ b/app/src/main/res/layout/fragment_advanced.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdvancedSearch">
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:ignore="MissingConstraints">
+    tools:context=".Advanced">
 
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -24,6 +19,7 @@
                 android:id="@+id/text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp"
                 android:text="يمكنك اختيار أي فئة للبحث أو يمكنك الجمع بينها"
                 android:textStyle="bold" />
@@ -37,7 +33,7 @@
                 android:text="بالقرب من "
                 android:drawableLeft="@drawable/locationpin"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent" />
+                />
             <TextView
                 android:id="@+id/textlocation"
                 android:layout_width="match_parent"
@@ -116,6 +112,5 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"></ListView>
         </LinearLayout>
-    </ScrollView>
-
-</android.support.constraint.ConstraintLayout>
+</ScrollView>
+</FrameLayout>
