--- a/app/src/main/res/layout/all_questions_layout.xml
+++ b/app/src/main/res/layout/all_questions_layout.xml
@@ -58,6 +58,21 @@
 
 
         </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/questionSubject"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="3dp"
+            android:text="المادة"
+            android:textColor="@android:color/black"
+            android:textSize="14dp" />
+    </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
