--- a/app/src/main/res/layout/content_notifications.xml
+++ b/app/src/main/res/layout/content_notifications.xml
@@ -7,11 +7,29 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".notifications"
     tools:showIn="@layout/app_bar_instructor_main">
-
+    <LinearLayout
+        android:id="@+id/container"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <ListView
         android:id="@+id/list2"
         android:layout_marginTop="60dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></ListView>
+        android:layout_height="wrap_content"
+        android:layout_weight="5"
+        ></ListView>
+
+
+
+    <ListView
+        android:id="@+id/list3"
+        android:layout_marginTop="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="5"></ListView>
+
+    </LinearLayout>
+
 </RelativeLayout>
