--- a/app/src/main/res/layout/activity_sign_up_instructor.xml
+++ b/app/src/main/res/layout/activity_sign_up_instructor.xml
@@ -19,6 +19,11 @@
             android:layout_centerVertical="true"
             android:orientation="vertical">
 
+
+
+
+
+
             <TextView
                 android:id="@+id/textview"
                 android:layout_width="wrap_content"
@@ -188,9 +193,11 @@
                 android:layout_height="wrap_content"
                 android:text="فضلاً أرفق سيرتك الذاتية" />
 
+
+
             <Button
-                android:id="@+id/buttonBrowse"
-                android:layout_width="match_parent"
+                android:id="@+id/buttonBrowse2"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
                 android:text="اختر" />
