--- a/app/src/main/res/layout/activity_ask2.xml
+++ b/app/src/main/res/layout/activity_ask2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".askActivity">
+    tools:context=".askActivity2">
 
     <EditText
         android:id="@+id/questionText"
@@ -27,7 +27,7 @@
         android:layout_height="37dp"
         android:layout_alignEnd="@+id/questionText"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="17dp"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="27dp"
         android:hint="من فضلك اختر المادة"/>
@@ -49,6 +49,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="78dp" />
+        android:layout_marginTop="76dp" />
 
 </RelativeLayout>
