--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -8,5 +8,229 @@
     tools:context=".settings"
     tools:showIn="@layout/app_bar_instructor_main">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="50dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/InstructorFN"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="الاسم الأول"
+                />
+            <ImageButton
+                android:id="@+id/edit21"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit"
+                android:layout_marginLeft="50dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/InstructorLN"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="الاسم الأخير"
+                />
+            <ImageButton
+                android:id="@+id/edit22"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit"
+                android:layout_marginLeft="50dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/InstructorG"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="الجنس"
+                />
+            <ImageButton
+                android:id="@+id/edit23"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit"
+                android:layout_marginLeft="50dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/InstructorDob"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="تاريخ الميلاد"
+                />
+            <ImageButton
+                android:id="@+id/edit24"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit"
+                android:layout_marginLeft="50dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/InstructorEma"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="الايميل"
+                />
+            <ImageButton
+                android:id="@+id/edit25"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit"
+                android:layout_marginLeft="50dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/InstructorSu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="المواد"
+                />
+            <ImageButton
+                android:id="@+id/edit26"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit"
+                android:layout_marginLeft="50dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/InstructorLikes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="المواد"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/InstructorPlace"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="مكان الدرس"
+                />
+            <ImageButton
+                android:id="@+id/edit28"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit"
+                android:layout_marginLeft="50dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/InstructorPhone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="رقم التلفون"
+                />
+            <ImageButton
+                android:id="@+id/edit29"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit"
+                android:layout_marginLeft="50dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/InstructorTMethod"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="طريقة التدريس"
+                />
+            <ImageButton
+                android:id="@+id/edit30"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit"
+                android:layout_marginLeft="50dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/InstructorPayment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="طريقة الدفع"
+                />
+            <ImageButton
+                android:id="@+id/edit31"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit"
+                android:layout_marginLeft="50dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/InstructorPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="السعر"
+                />
+            <ImageButton
+                android:id="@+id/edit32"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit"
+                android:layout_marginLeft="50dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/InstructorYoe"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="سنوات الخبرة"
+                />
+            <ImageButton
+                android:id="@+id/edit33"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit"
+                android:layout_marginLeft="50dp"/>
+        </LinearLayout>
+
+
+
+    </LinearLayout>
 
 </RelativeLayout>
