--- a/app/src/main/res/layout/content_settings2.xml
+++ b/app/src/main/res/layout/content_settings2.xml
@@ -7,6 +7,116 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".settings2"
     tools:showIn="@layout/app_bar_student_main">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_marginTop="50dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/IndividualFN"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="الاسم الأول"
+            />
+        <ImageButton
+            android:id="@+id/edit1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/edit"
+            android:layout_marginLeft="50dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/IndividualLN"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="الاسم الأخير"
+            />
+        <ImageButton
+            android:id="@+id/edit2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/edit"
+            android:layout_marginLeft="50dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/IndividualG"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="الجنس"
+            />
+        <ImageButton
+            android:id="@+id/edit3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/edit"
+            android:layout_marginLeft="50dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/IndividualDob"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="تاريخ الميلاد"
+            />
+        <ImageButton
+            android:id="@+id/edit4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/edit"
+            android:layout_marginLeft="50dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/IndividualEma"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="الايميل"
+            />
+        <ImageButton
+            android:id="@+id/edit5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/edit"
+            android:layout_marginLeft="50dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/IndividualSu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="المواد"
+            />
+        <ImageButton
+            android:id="@+id/edit6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/edit"
+            android:layout_marginLeft="50dp"/>
+    </LinearLayout>
 
+
+
+</LinearLayout>
 
 </RelativeLayout>
